[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/HechizoAqua.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Animacions/aigua/aigua_cast_4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Animacions/aigua/aigua_interior_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Animacions/aigua/agua_carcle5.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="Animation" id=2]

resource_name = "cargar"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]

resource_name = "animarAigua"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]

resource_name = "rotate"
length = 2.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=5]

resource_name = "Compressio"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cercleMagic:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("aigua:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}

[node name="HechizoAqua" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
disabled = true

[node name="magiaMagic" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
hframes = 4
frame = 3
_sections_unfolded = [ "Animation", "Offset" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="magiaMagic" index="0"]

root_node = NodePath("..")
autoplay = "cargar"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/cargar = SubResource( 2 )
blend_times = [  ]

[node name="aigua" type="Sprite" parent="." index="2"]

visible = false
show_behind_parent = true
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
hframes = 2
frame = 1
_sections_unfolded = [ "Animation", "Region", "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="aigua" index="0"]

root_node = NodePath("..")
autoplay = "animarAigua"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/animarAigua = SubResource( 3 )
blend_times = [  ]

[node name="cercleMagic" type="Sprite" parent="." index="3"]

visible = false
rotation = -1.10453
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Rotation" type="AnimationPlayer" parent="cercleMagic" index="0"]

root_node = NodePath("..")
autoplay = "rotate"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotate = SubResource( 4 )
blend_times = [  ]

[node name="compExp" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Compressio = SubResource( 5 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_HechizoFogo_body_entered"]

[connection signal="animation_finished" from="magiaMagic/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="animation_finished" from="compExp" to="." method="_on_compExp_animation_finished"]


